--- a/style.css
+++ b/style.css
@@ -1,11 +1,79 @@
-html {
+html,
+body {
 	margin: 0;
 	padding: 0;
-	background: coral;
+	font-family: Lato, Helvetica, Arial, sans-serif;
+	background-color: #6351e8;
+	overflow-x: hidden;
 }
 
+body {
+	position: relative;
+}
+
+/* Nav bar */
+header {
+	width: 100%;
+	height: 70px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	background: #232323;
+	color: #ccc;
+}
+
+.nav {
+	z-index: 69;
+	display: flex;
+	justify-content: space-around;
+	width: 30%;
+}
+
+.navlink {
+	list-style: none;
+	margin: 0;
+}
+
+.navlink a {
+	color: #ccc;
+	text-decoration: none;
+	font-size: 1.2em;
+}
+
+.burger {
+	font-size: 1.2em;
+	display: none;
+}
+
+@media screen and (max-width: 678px) {
+	.burger {
+		display: block;
+	}
+	.nav {
+		margin: 0;
+		background: #343434;
+		position: absolute;
+		right: -100%;
+		top: 70px;
+		width: 50%;
+		height: calc(100% - 70px);
+		flex-direction: column;
+		justify-content: space-around;
+		padding: 0;
+		transition: all 400ms;
+	}
+	.navlink {
+		text-align: center;
+	}
+
+	.nav-active {
+		right: 0;
+	}
+}
+
+/* Main content */
 .container {
-	padding-top: 20%;
+	padding-top: 10%;
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -16,16 +84,20 @@ html {
 
 .container a {
 	color: white;
+	margin-top: 2%;
+	padding: 1.5%;
+	background-color: #5865f2;
 	font-size: 30px;
-	font-family: "Roboto", sans-serif;
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	transition: 0.5s;
+	font-weight: bolder;
 }
 
 .container a:hover {
-	transform: scale(1.1);
+	color: rgb(226, 211, 255);
+	background-color: #8a94fa;
 }
 
 .logo {
@@ -45,9 +117,25 @@ html {
 }
 
 .logo img {
-	background-color: bisque;
-	width: 150px;
-	height: 150px;
+	background-color: #cfc9fd;
+	width: 250px;
+	height: 250px;
 	border-radius: 50%;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 7%;
+	background-color: #232323;
+	color: white;
+	text-align: center;
+}
+
+.input {
+	font-size: 120%;
+	color: #cdbeec;
 }
