--- a/style.css
+++ b/style.css
@@ -35,9 +35,15 @@ header {
 }
 
 .navlink a {
+	transition: 0.5s;
 	color: #ccc;
 	text-decoration: none;
 	font-size: 1.2em;
+}
+
+.navlink a:hover {
+	color: white;
+	text-decoration: underline;
 }
 
 .burger {
