--- a/style.css
+++ b/style.css
@@ -3,12 +3,37 @@ body {
   margin: 0;
   padding: 0;
   font-family: Lato, Helvetica, Arial, sans-serif;
-  background-color: #6351e8;
   overflow-x: hidden;
+  background-color: #151019;
+  z-index: 0;
 }
 
 body {
   position: relative;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+ul,
+li,
+p {
+  color: #cce7ff;
+}
+
+ul {
+  font-size: 120%;
+}
+
+.background {
+  background-color: #151019;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /* Nav bar */
@@ -89,7 +114,7 @@ header {
   align-items: center;
 }
 
-.container a {
+.invite {
   color: white;
   margin-top: 2%;
   padding: 1.5%;
@@ -101,10 +126,9 @@ header {
   transition: 0.5s;
   font-weight: bolder;
 }
-
-.container a:hover {
-  color: #e2d3ff;
-  background-color: #8a94fa;
+.invite:hover {
+  color: #cbd0fd;
+  background-color: #3d4cf6;
 }
 
 .logo {
@@ -136,7 +160,7 @@ header {
   }
 }
 .logo img {
-  background-color: #cfc9fd;
+  background-color: #c6e4ff;
   width: 250px;
   height: 250px;
   border-radius: 50%;
@@ -156,7 +180,7 @@ footer {
 
 .input {
   font-size: 120%;
-  color: #cdbeec;
+  color: #88c8ff;
 }
 
 /* 404 */
